# chess

./: Chess.cpp  Chess.h  Makefile.am  Makefile.in  README.md  board.cc  board.cpp  board.h  chess.cpp  chess.h  chesslogic.cpp  chesslogic.h  evaluation.cpp  evaluation.h  index.html  main.cc  movelogic.cpp  movelogic.h  params.json  pieces.cc  pieces.cpp  pieces.h
